--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 server.port=8095
+
+#JSON WEB TOKEN
+jwt.secret=secret
+jwt.expiration=3600
